--- a/modules/display/xmonad/Colors.hs.mustache
+++ b/modules/display/xmonad/Colors.hs.mustache
@@ -4,7 +4,7 @@ import XMonad
 
 colorBg = "#{{base00}}"
 colorFg = "#{{base05}}"
-color01 = "#{{base01}}" -- usually black
+color01 = "#{{base02}}"
 color02 = "#{{base08}}" -- usually red
 color03 = "#{{base0B}}" -- usually green
 color04 = "#{{base0A}}" -- usually yellow
